book list and detail templates work now. Author list works, author detail template FOR loop not working yet showing all books by a single author

--- a/catalog/templates/catalog/book_detail.html
+++ b/catalog/templates/catalog/book_detail.html
@@ -15,7 +15,7 @@
           {{ genre }}
           {% if not forloop.last %},
           {% endif %}
-      {% endfor %}w
+      {% endfor %}
   </p>
 
   <div style="margin-left:20px;margin-top:20px">
