--- a/catalog/templates/catalog/author_detail.html
+++ b/catalog/templates/catalog/author_detail.html
@@ -6,25 +6,15 @@
 
 
 {% block content %}
-  <h1>Books by {{ book.author.first_name }} {{ book.author.last_name }}</h1>
 
   <div style="margin-left:20px;margin-top:20px">
-    <h3>Titles</h3>
-
-        {% for book in book_list %}
-          <p><a href="{{ book.get_absolute_url }}">{{ book.title }}</a></p>
-          <p>{{ book.summary }}</p>
-          <p><strong>Language:</strong> {{ book.language }}</p>
-{#          <p><strong>Genre:</strong>#}
-{#              {% for genre in book.genre.all %}#}
-{#                  {{ genre }}#}
-{#                  {% if not forloop.last %},#}
-{#                  {% endif %}#}
-{#              {% endfor %}#}
-{#          </p>#}
+    <h1>Books by {{ author.first_name }} {{ author.last_name }}</h1>
+       <dl>
+        {% for book in author.book_set.all %}
+          <dt><a href="{% url 'book-detail' book.pk %}">{{book}}</a> ({{book.bookinstance_set.all.count}})</dt>
+          <dd>{{book.summary}}</dd>
         {% endfor %}
-
-
-
+       </dl>
   </div>
+
 {% endblock %}
