--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -27,9 +27,10 @@
           <li><a href="{% url 'authors' %}">All authors</a></li>
       {% if user.is_authenticated %}
           <li>User: {{ user.get_username }}</li>
-          <li><a href="{% url 'logout'%}">Logout</a></li>
+          <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
+          <li><a href="{% url 'logout' %}">Logout</a></li>
        {% else %}
-          <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+          <li><a href="{% url 'login' %}?next={{request.path}}">Login</a></li>
        {% endif %}
       </ul>
      {% endblock %}
